# fastuserswitch

./: .gitignore  INSTALL  LICENSE  Makefile.am  README.md  autogen.sh  configure.ac  extension.js  fastuserswitch.pot  gnome-autogen.sh  include.mk  metadata.json
locale/de/LC_MESSAGES/: fastuserswitch.mo  fastuserswitch.po
locale/fr/LC_MESSAGES/: fastuserswitch.mo  fastuserswitch.po
po/: .gitignore  fr.po
src/: .gitignore  Makefile.am  extension.js  metadata.json.in
